fix(table): fixed table spacing and border

--- a/src/components/table/data-table.scss
+++ b/src/components/table/data-table.scss
@@ -7,15 +7,14 @@
     font-family: $font-family;
     color: $color-content-default;
     width: 100%;
-    border: 1px solid $color-border-1;
+    border: 1px solid $color-border-3;
     border-radius: 8px;
     overflow-x: auto;
-    padding: 16px;
     background-color: $color-surface-1;
 
     .thead {
       border-bottom: 1px solid $color-border-1;
-      padding: 8px 16px;
+      padding: 0 16px;
       .header {
         display: flex;
         flex-direction: row;
@@ -25,7 +24,7 @@
         height: 64px;
         gap: 16px;
         .header-title {
-          height: 48px;
+          height: 64px;
           width: 100%;
           display: flex;
           flex-direction: row;
@@ -46,10 +45,9 @@
       justify-content: space-between;
       align-items: center;
       height: 64px;
-      margin: 0px 8px;
-      padding: 0 8px;
+      padding: 0 16px;
       gap: 16px;
-      border-bottom: 1px solid $color-border-1;
+      border-bottom: 1px solid $color-border-2;
 
       .body-item {
         height: 48px;
@@ -59,6 +57,10 @@
         align-items: center;
         justify-content: flex-start;
       }
+    }
+
+    .body-row:last-child {
+      border-bottom: none;
     }
   }
 }
