--- a/src/components/table/table-header/table-header.scss
+++ b/src/components/table/table-header/table-header.scss
@@ -1,5 +1,6 @@
 :host {
     display: table-header-group;
+    border-bottom: 1px solid $color-border-1;
   }
   
   
